add getuserid handler
