# docs/swagger.yaml
@@ -6,7 +6,13 @@ definitions:
         example: eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NTE5MDUzMDQsInN1YiI6ImZiNjJhYTgxLTExNzItNGM3My04ZmMzLWNkNWE0NDYzNDZiYSJ9.SZHR-VexEcSNwe1GbmiG0p8lQVMTLH9MOIWV2N3I4ZMXEtYWF4Zcm4SKeaGFND7JCZ858VmId1WgPXKxTzF_iA
         type: string
     type: object
-  handlers.badRequestResp:
+  handlers.UserIdResponse:
+    properties:
+      userId:
+        example: eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NTE5MDUzMDQsInN1YiI6ImZiNjJhYTgxLTExNzItNGM3My04ZmMzLWNkNWE0NDYzNDZiYSJ9.SZHR-VexEcSNwe1GbmiG0p8lQVMTLH9MOIWV2N3I4ZMXEtYWF4Zcm4SKeaGFND7JCZ858VmId1WgPXKxTzF_iA
+        type: string
+    type: object
+  handlers.errBadRequestResp:
     properties:
       message:
         example: 'signup error: uncorrect uuid'
@@ -15,7 +21,16 @@ definitions:
         example: false
         type: boolean
     type: object
-  handlers.srvrErrResp:
+  handlers.errGetUserIdResp:
+    properties:
+      message:
+        example: 'getUserId error: error on server side'
+        type: string
+      success:
+        example: false
+        type: boolean
+    type: object
+  handlers.errSignupResp:
     properties:
       message:
         example: 'signup errror: error on server side or user already exist'
@@ -30,6 +45,26 @@ info:
   title: Auth server API
   version: "1.0"
 paths:
+  /api/getuserid:
+    get:
+      description: chek Authorization header and extract user id from claims in jwt.
+      operationId: getuserid
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.UserIdResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.errGetUserIdResp'
+      security:
+      - bearerAuth: []
+      summary: return curent user id
+      tags:
+      - auth
   /api/signup:
     post:
       consumes:
@@ -59,12 +94,18 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handlers.badRequestResp'
+            $ref: '#/definitions/handlers.errBadRequestResp'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.srvrErrResp'
+            $ref: '#/definitions/handlers.errSignupResp'
       summary: create account
       tags:
       - auth
+securityDefinitions:
+  bearerAuth:
+    description: 'Enter the token with the `Bearer: ` prefix'
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
